force-app/main/default/objects/Fin_Plan_Data__c/Fin_Plan_Data__c.object-meta.xml
<CustomObject>
    <label>Fin Plan Data</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Fin Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fin Plan Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>