force-app/main/default/objects/Fin_Plan_Data__c/fields/BA_Change__c.field-meta.xml
<CustomField>
    <fullName>BA_Change__c</fullName>
    <label>BA Change</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>