force-app/main/default/objects/Fin_Plan_Data__c/fields/BA_Previous__c.field-meta.xml
<CustomField>
    <fullName>BA_Previous__c</fullName>
    <label>BA Previous</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>