force-app/main/default/objects/Fin_Plan_Data__c/fields/Beginning_Uncosted_Obs__c.field-meta.xml
<CustomField>
    <fullName>Beginning_Uncosted_Obs__c</fullName>
    <label>Beginning Uncosted Obs</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>