force-app/main/default/objects/Fin_Plan_Data__c/fields/Finplan_Number__c.field-meta.xml
<CustomField>
    <fullName>Finplan_Number__c</fullName>
    <label>Finplan Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>