force-app/main/default/objects/Fin_Plan_Data__c/fields/Legacy_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Order_Number__c</fullName>
    <label>Legacy Order Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>