force-app/main/default/objects/Fin_Plan_Data__c/fields/Legacy_Pgm_Parent_Control_Point__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Pgm_Parent_Control_Point__c</fullName>
    <label>Legacy Pgm Parent/Control Point</label>
    <length>9</length>
    <type>Text</type>
</CustomField>