force-app/main/default/objects/Fin_Plan_Data__c/fields/Legacy_Program__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Program__c</fullName>
    <inlineHelpText>B&amp;R Code</inlineHelpText>
    <label>Legacy Program</label>
    <length>9</length>
    <type>Text</type>
</CustomField>