force-app/main/default/objects/Fin_Plan_Data__c/fields/Object_Class__c.field-meta.xml
<CustomField>
    <fullName>Object_Class__c</fullName>
    <label>Object Class</label>
    <length>5</length>
    <type>Text</type>
</CustomField>