force-app/main/default/objects/Fin_Plan_Data__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <length>7</length>
    <type>Text</type>
</CustomField>