force-app/main/default/objects/Fin_Plan_Data__c/fields/Total_Available__c.field-meta.xml
<CustomField>
    <fullName>Total_Available__c</fullName>
    <label>Total Available</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>