force-app/main/default/objects/Fin_Plan_Data__c/fields/WFO__c.field-meta.xml
<CustomField>
    <fullName>WFO__c</fullName>
    <label>WFO</label>
    <length>7</length>
    <type>Text</type>
</CustomField>