force-app/main/default/objects/Fin_Plan_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WFO__c</columns>
    <columns>Legacy_Order_Number__c</columns>
    <columns>Legacy_Pgm_Parent_Control_Point__c</columns>
    <columns>Legacy_Program__c</columns>
    <columns>Program__c</columns>
    <columns>BA_Previous__c</columns>
    <columns>BA_Revised__c</columns>
    <columns>BA_Change__c</columns>
    <columns>Total_Available__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>